--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,3 +2,8 @@ site_name: docs.repo.trade
 site_url: https://docs.repo.trade
 theme:
   name: material
+
+markdown_extensions:
+  - admonition
+  - pymdownx.details
+  - pymdownx.superfences
